syntax = "proto3";

package authpackage;

service AuthService {
  rpc login (LoginRequest) returns (LoginResponse);
  rpc register (LoginRequest) returns (Message);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message Message {
  string message = 1;
}
